Improved UI and corrected links and text alomost cleared

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -1,17 +1,3 @@
-<!--
-=========================================================
-* Material Dashboard 2 - v3.1.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/material-dashboard
-* Copyright 2023 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://www.creative-tim.com/license)
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -189,7 +175,7 @@ function disable() {
                         xmlhttp.open("GET", "../email/email_base.php?q="+email+"&type=thanks&position=teacher", true);
                         xmlhttp.send(); 
                 alert('Signed Up Successfully....');
-                window.location.href='../teacher';
+                window.location.href='sign-in.html';
                   } 
                 }
               });
