--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -1,17 +1,3 @@
-<!--
-=========================================================
-* Material Dashboard 2 - v3.1.0
-=========================================================
-
-* Product Page: https://www.creative-tim.com/product/material-dashboard
-* Copyright 2023 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://www.creative-tim.com/license)
-* Coded by Creative Tim
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -107,7 +93,7 @@
                 $('#password').focus();
                 }  else{ 
                 alert("Signed up successfully");
-                window.location.href='dashboard.php';
+                window.location.href='issue_book.php';
               } 
             }
           });
