--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -50,7 +50,7 @@
                   </div>
                   
                   <p class="mt-1 text-sm text-left">
-                    <a href="../pages/sign-up.html" class="text-primary text-gradient">Forgot Password?</a>
+                    <a href="../pages/forgot_pass.html" class="text-primary text-gradient">Forgot Password?</a>
                   </p>
                   <div class="text-center">
                     <button type="button"  onclick=response() class="btn bg-gradient-primary w-100 my-2 mb-2">Sign in</button>
